# tarox

./: .gitmodules  CMakeLists.txt  Kconfig  Makefile
boards/flysq/v1/: default.taroxboard  default.taroxconfig
boards/flysq/v1/nuttx-config/nsh/: defconfig
boards/flysq/v1/nuttx-config/scripts/: script.ld
cmake/: board_config.cmake  kconfig.cmake  tarox_add_module.cmake  tarox_config.cmake  tarox_git.cmake  tarox_list_make_absolute.cmake  tarox_message.cmake  tarox_parse_function_args.cmake
tools/: check_submodules.sh
tools/kconfig/: allyesconfig.py  updateconfig.py
